<resources>
    <string name="app_name">TipCalculator</string>
    <string name="check_amount">Check Amount:</string>
    <string name="party_size">Party Size:</string>
    <string name="tip">Tip: </string>
    <string name="tip_15">15% </string>
    <string name="tip_20">20% </string>
    <string name="tip_25">25% </string>
    <string name="total">Total: </string>
    <string name="compute">COMPUTE TIP</string>

</resources>