<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCalculatorActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/check_amount"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/partySizeValue"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="119dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/party_size"
        app:layout_constraintEnd_toStartOf="@+id/partySizeValue"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/party_size" />

    <EditText
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="63dp"
        android:layout_height="42dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginTop="120dp"
        android:text="@string/tip_15"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTipValue"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/tip_15" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="39dp"
        android:layout_height="27dp"
        android:layout_marginTop="56dp"
        android:text="@string/total"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/total" />

    <EditText
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipValue" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="47dp"
        android:layout_height="49dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="6dp"
        android:text="@string/tip_25"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTipValue"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTipValue"
        app:layout_constraintTop_toBottomOf="@+id/partySizeValue"
        tools:text="@string/tip_25" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="181dp"
        android:layout_height="53dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="135dp"
        android:text="@string/compute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partySizeValue"
        tools:text="@string/compute" />

    <EditText
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="57dp"
        android:layout_height="42dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="116dp"
        android:text="@string/tip"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/tip" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="4dp"
        android:text="@string/tip_15"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/tip_15" />

    <EditText
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/twentyPercentTipValue" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="43dp"
        android:layout_height="52dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="60dp"
        android:text="@string/tip_20"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTipValue"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTipValue"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute"
        tools:text="@string/tip_20" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tip_25"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/tip_25" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tip_20"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="@string/tip_20" />

    <EditText
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="60dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/partySizeValue" />

    <EditText
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="54dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyfivePercentTipValue" />

    <EditText
        android:id="@+id/checkAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/partySizeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAmountValue" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="17dp"
        android:text="Tip and Totals Per Person"
        app:layout_constraintBottom_toTopOf="@+id/twentyPercentTipValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

</androidx.constraintlayout.widget.ConstraintLayout>